[package]
name = "yart-example"
version = "0.1.0"
edition = "2021"
description = "An example project demonstrating the use of the YART library for rig::tool::Tool implementations"
license = "MIT"
repository = "https://github.com/pupplecat/yart-example"                                                         # Update with actual repository


[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
rig-core = "0.12.0"
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
yart = "0.1.1"
